changed WATCH_NAMESPACE for admission

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -16578,9 +16578,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+              value: application
             - name: POD_NAME
               valueFrom:
                 fieldRef:
